[package]
name = "akro"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
jsonrpc-macros = { git="https://github.com/paritytech/jsonrpc.git" }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-network-libp2p = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
substrate-client-db = { git = "https://github.com/paritytech/substrate" }
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
substrate-state-db = { git = "https://github.com/paritytech/substrate" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate" }
substrate-telemetry = { git = "https://github.com/paritytech/substrate" }
substrate-bft = { git = "https://github.com/paritytech/substrate", default_features = false }
substrate-rpc-servers = { git = "https://github.com/paritytech/substrate" }
srml-balances = { git = "https://github.com/paritytech/substrate" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc" }
ctrlc = { version = "3.0", features = ["termination"] }
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "2.0" }
akro-primitives = { path = "./primitives" }
akro-consensus = { path = "./consensus" }
akro-executor = { path = "./executor" }
akro-runtime = { path = "./runtime" }
akro-network = { path = "./network" }
akro-pool = { path = "./pool" }
akro-rpc = { path = "./rpc" }
akro-api = { path = "./api" }

env_logger = "0.5.13"
rhododendron = "0.3"
hex-literal = "0.1"
exit-future = "0.1"
futures = "0.1.17"
ansi_term = "0.10"
sysinfo = "0.5.7"
tokio = "0.1.7"
names = '0.11.0'
clap = "2.30.0"
base58 = "0.1"
slog = "^2"
log = "0.3"

[workspace]
members = [
    "primitives",
    "consensus",
    "executor",
    "runtime",
    "network",
    "pool",
    "rpc",
    "api",
    "arml/system",
    "arml/support",
    "arml/mining/staking",
    "arml/mining/tokenstaking",
    "arml/example",
]
