[package]
name = "akro"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
jsonrpc-macros = { git="https://github.com/paritytech/jsonrpc.git", rev = '8ffc7f30a633d405adae5ead3d6e6422b0c612d8' }
substrate-network = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-network-libp2p = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-client = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-client-db = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-keyring = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-state-db = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-state-machine = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-telemetry = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-rpc-servers = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }

jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc" }
ctrlc = { version = "3.0", features = ["termination"] }
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "2.0" }

akro-primitives = { path = "./primitives" }
akro-consensus = { path = "./consensus" }
akro-executor = { path = "./executor" }
akro-runtime = { path = "./runtime" }
akro-network = { path = "./network" }
akro-pool = { path = "./pool" }
akro-rpc = { path = "./rpc" }
akro-api = { path = "./api" }
arml-tokenbalances = { path = "./arml/tokenbalances" }

env_logger = "0.5.13"
rhododendron = "0.3"
hex-literal = "0.1"
exit-future = "0.1"
futures = "0.1.17"
ansi_term = "0.10"
sysinfo = "0.5.7"
tokio = "0.1.7"
names = '0.11.0'
clap = "2.30.0"
base58 = "0.1"
slog = "^2"
log = "0.3"

substrate-bip39 = { path="vendor/substrate-bip39" }

[patch.'https://github.com/paritytech/substrate-bip39']
substrate-bip39 = { path="vendor/substrate-bip39" }

[workspace]
members = [
    "primitives",
    "consensus",
    "executor",
    "runtime",
    "network",
    "pool",
    "rpc",
    "api",
    "arml/system",
    "arml/support",
    "arml/tokenbalances",
    "arml/associations",
    "arml/mining/staking",
    "arml/mining/tokenstaking",
    "arml/example",
]
