[package]
name = "akro-api"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
sr-primitives = { git = "https://github.com/paritytech/substrate" }
srml-executive = { git = "https://github.com/paritytech/substrate" }
sr-io = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-client-db = { git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
akro-primitives = { path = "../primitives" }
akro-executor = { path = "../executor" }
akro-runtime = { path = "../runtime" }
parity-codec = { version = "2.0" }
log = "0.3"
