[package]
name = "akro-consensus"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-support = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-client = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-network = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
akro-primitives = {path = "../primitives" }
akro-runtime = {path = "../runtime" }
parity-codec = { version = "2.0" }
akro-pool = {path = "../pool" }
akro-api = {path = "../api" }
error-chain = "0.12"
rhododendron = "0.3"
exit-future = "0.1"
parking_lot = "0.4"
futures = "0.1.17"
tokio = "0.1.7"
log = "0.3"

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
