[package]
name = "akro-executor"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
akro-runtime = { path = "../runtime" }
