[package]
name = "akro-network"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-bft = { git = "https://github.com/paritytech/substrate" }
akro-primitives = { path = "../primitives" }
akro-consensus = { path = "../consensus" }
parity-codec-derive = { version = "2.0" }
parity-codec = { version = "2.0" }
akro-api = { path = "../api" }
rhododendron = "0.3"
futures = "0.1"
tokio = "0.1.7"
log = "0.4"
