[package]
name = "akro-pool"
version = "0.3.0"
authors = ["Akropolis  <https://www.akropolis.io>"]

[dependencies]
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sr-io = { git = "https://github.com/paritytech/substrate" }
srml-support = { git = "https://github.com/paritytech/substrate" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
substrate-client-db = { git = "https://github.com/paritytech/substrate" }
akro-primitives = { path = "../primitives" }
akro-runtime = { path = "../runtime" }
akro-executor = {path = "../executor"}
parity-codec = { version = "2.0" }
akro-api = { path = "../api" }
triehash = { version = "0.2.3" }
error-chain = "0.12"
hex-literal = "0.1"
log = "0.3"

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
srml-staking = { git = "https://github.com/paritytech/substrate" }
srml-system = { git = "https://github.com/paritytech/substrate" }
srml-consensus = { git = "https://github.com/paritytech/substrate" }
