[package]
name = "akro-runtime"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default_features = false}
parity-codec = "2.0"
parity-codec-derive = "2.0"
sr-std = { git = "https://github.com/paritytech/substrate" }
sr-io = { git = "https://github.com/paritytech/substrate" }
srml-support = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
srml-consensus = { git = "https://github.com/paritytech/substrate" }
srml-contract = { git = "https://github.com/paritytech/substrate" }
srml-balances = { git = "https://github.com/paritytech/substrate" }
srml-council = { git = "https://github.com/paritytech/substrate" }
srml-democracy = { git = "https://github.com/paritytech/substrate" }
srml-executive = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
srml-session = { git = "https://github.com/paritytech/substrate" }
srml-system = { git = "https://github.com/paritytech/substrate" }
srml-timestamp = { git = "https://github.com/paritytech/substrate" }
srml-treasury = { git = "https://github.com/paritytech/substrate" }
sr-version = { git = "https://github.com/paritytech/substrate" }
akro-primitives = { path = "../primitives" }

# akro runtime module
arml-system = { path = "../arml/system" }
arml-support = { path = "../arml/support" }
arml-tokenbalances = { path = "../arml/tokenbalances" }
arml-multisig = { path = "../arml/multisig" }
arml-associations = { path = "../arml/associations" }
# mining
arml-mining-staking = { path = "../arml/mining/staking" }
arml-mining-tokenstaking = { path = "../arml/mining/tokenstaking" }
# bridge
arml-bridge-btc = { path = "../arml/bridge/btc" }
# funds
arml-funds-financialrecords = { path = "../arml/funds/financialrecords" }
arml-funds-withdrawal = { path = "../arml/funds/withdrawal" }
# exchange
arml-exchange-pendingorders = { path = "../arml/exchange/pendingorders" }
arml-exchange-matchorder = { path = "../arml/exchange/matchorder" }

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "srml-consensus/std",
    "srml-council/std",
    "srml-democracy/std",
    "srml-executive/std",
    "sr-primitives/std",
    "srml-session/std",
    "srml-system/std",
    "srml-timestamp/std",
    "sr-version/std",
    "akro-primitives/std",
    "serde_derive",
    "serde/std",
    "safe-mix/std",
    "arml-system/std",
    "arml-support/std",
    "arml-tokenbalances/std",
    "arml-multisig/std",
    "arml-associations/std",
    "arml-mining-staking/std",
    "arml-mining-tokenstaking/std",
    "arml-bridge-btc/std",
    "arml-funds-financialrecords/std",
    "arml-funds-withdrawal/std",
    "arml-exchange-pendingorders/std",
    "arml-exchange-matchorder/std",
]
