[package]
name = "akro-runtime"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default_features = false}
parity-codec = "2.0"
parity-codec-derive = "2.0"

sr-std = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-io = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-support = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-consensus = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-contract = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-council = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-democracy = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-executive = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-session = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-system = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-timestamp = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-treasury = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-version = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }

akro-primitives = { path = "../primitives" }

# akro runtime module
arml-system = { path = "../arml/system" }
arml-support = { path = "../arml/support" }
arml-tokenbalances = { path = "../arml/tokenbalances" }
# mining
arml-mining-staking = { path = "../arml/mining/staking" }
arml-mining-tokenstaking = { path = "../arml/mining/tokenstaking" }

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "srml-consensus/std",
    "srml-council/std",
    "srml-democracy/std",
    "srml-executive/std",
    "sr-primitives/std",
    "srml-session/std",
    "srml-system/std",
    "srml-timestamp/std",
    "sr-version/std",
    "akro-primitives/std",
    "serde_derive",
    "serde/std",
    "safe-mix/std",
    "arml-system/std",
    "arml-support/std",
    "arml-tokenbalances/std",
    "arml-mining-staking/std",
    "arml-mining-tokenstaking/std",
]
