[package]
name = "akro-runtime"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default_features = false}
parity-codec = { version = "3.5", default-features = false, features = ['derive'] }
parity-codec-derive = "2.0"

sr-std = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-io = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-support = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
substrate-client = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-consensus = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-contract = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-indices = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830'}
srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-council = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-democracy = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-executive = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-aura = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-session = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-system = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-timestamp = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
srml-treasury = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
sr-version = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
consensus-aura = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', package = 'substrate-consensus-aura-primitives' }
offchain-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', package = 'substrate-offchain-primitives' }
consensus-authorities = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', package = 'substrate-consensus-authorities' }

akro-primitives = { path = "../primitives" }

# akro runtime module
arml-system = { path = "../arml/system" }
arml-support = { path = "../arml/support" }
arml-tokenbalances = { path = "../arml/tokenbalances" }
arml-associations = { path = "../arml/associations" }
# mining
arml-mining-staking = { path = "../arml/mining/staking" }
arml-mining-tokenstaking = { path = "../arml/mining/tokenstaking" }
# bridge
arml-bridge-btc = { path = "../arml/bridge/btc" }
# funds
arml-funds-financialrecords = { path = "../arml/funds/financialrecords" }
arml-funds-withdrawal = { path = "../arml/funds/withdrawal" }
# exchange
arml-exchange-pendingorders = { path = "../arml/exchange/pendingorders" }


[features]
default = ["std"]
std = [
    "parity-codec/std",
    "substrate-primitives/std",
    "substrate-client/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "srml-consensus/std",
    "srml-council/std",
    "srml-democracy/std",
    "srml-executive/std",
    "srml-aura/std",
    "sr-primitives/std",
    "srml-session/std",
    "srml-system/std",
    "srml-timestamp/std",
    "srml-balances/std",
    "srml-indices/std",
    "sr-version/std",
    "consensus-aura/std",
    "offchain-primitives/std",
    "consensus-authorities/std",
    "akro-primitives/std",
    "serde_derive",
    "serde/std",
    "safe-mix/std",
    "arml-system/std",
    "arml-support/std",
    "arml-tokenbalances/std",
    "arml-associations/std",
    "arml-mining-staking/std",
    "arml-mining-tokenstaking/std",
    "arml-bridge-btc/std",
    "arml-funds-financialrecords/std",
    "arml-funds-withdrawal/std",
    "arml-exchange-pendingorders/std",
]
