[package]
name = "akro-runtime"
version = "0.3.0"
authors = ["Akropolis <https://www.akropolis.io>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
integer-sqrt = { git = "https://github.com/paritytech/integer-sqrt-rs.git", branch = "master" }
safe-mix = { version = "1.0", default_features = false}
parity-codec = { version = "2.0", default-features = false }
parity-codec-derive = { version = "2.0" }

sr-std = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-consensus = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-contract = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-council = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-democracy = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-executive = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-session = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
srml-treasury = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }
sr-version = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default-features = false }

akro-primitives = { path = "../../primitives", default-features = false }

[features]
default = []
std = [
    "safe-mix/std",
    "parity-codec/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "srml-balances/std",
    "srml-consensus/std",
    "srml-council/std",
    "srml-democracy/std",
    "srml-executive/std",
    "sr-primitives/std",
    "srml-session/std",
    "srml-system/std",
    "srml-timestamp/std",
    "srml-treasury/std",
    "sr-version/std",
    "akro-primitives/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
