[package]
name = "arml-bridge-btc"
version = "0.3.0"
authors = ["Akropolis <https://akropolis.io>"]


[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "2.0", default-features = false }
parity-codec-derive = { version = "2.0", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-session = { git = "https://github.com/paritytech/substrate", default_features = false }
arml-system = { path = "../../system", default-features = false }
arml-associations = { path = "../../associations", default-features = false }
arml-support = { path = "../../support", default-features = false }
arml-tokenbalances = { path = "../../tokenbalances", default-features = false }
arml-funds-financialrecords = { path = "../../funds/financialrecords", default-features = false }
arml-mining-staking = { path = "../../mining/staking", default-features = false }

# bitcoin-rust
chain = { git = "https://github.com/akropolis.io/bitcoin-rust", default-features = false }
primitives = { git = "https://github.com/akropolis.io/bitcoin-rust", default-features = false }
serialization = { git = "https://github.com/akropolis.io/bitcoin-rust", default-features = false }
bitcrypto = { git = "https://github.com/akropolis.io/bitcoin-rust", default-features = false }
script = { git = "https://github.com/akropolis.io/bitcoin-rust", default-features = false }
keys = { git = "https://github.com/akropolis.io/bitcoin-rust", default-features = false }
merkle = { git = "https://github.com/akropolis.io/merkle.git", default-features = false }
bit-vec =  { git = "https://github.com/akropolis.io/bit-vec.git", default-features = false }
rustc-hex = { version = "2", optional = true }
base58 = { version = "0.1", optional = true }


[features]
default = ["std"]
std=[
    "serde/std",
    "serde_derive",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "rustc-hex",
    "base58",
    "sr-primitives/std",
    "srml-support/std",
    "srml-system/std",
    "srml-balances/std",
    "srml-consensus/std",
    "srml-timestamp/std",
    "srml-session/std",
    "arml-system/std",
    "arml-associations/std",
    "arml-support/std",
    "arml-tokenbalances/std",
    "arml-funds-financialrecords/std",
    "arml-mining-staking/std",

    # bitcoin-rust
    "chain/std",
    "keys/std",
    "primitives/std",
    "serialization/std",
    "bitcrypto/std",
    "script/std",
    "merkle/std",
    "bit-vec/std",
]
