[package]
name = "arml-mining-tokenstaking"
version = "0.3.0"
authors = ["Akropolis <https://akropolis.io>"]


[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "2.0", default-features = false }
parity-codec-derive = { version = "2.0", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default_features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default_features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default_features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default_features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default_features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", default_features = false }

# akro runtime module
arml-system = { path = "../../system", default_features = false }
arml-support = { path = "../../support",  default_features = false }
arml-associations = { path = "../../associations", default_features = false }
arml-tokenbalances = { path = "../../tokenbalances", default_features = false }
arml-mining-staking = { path = "../staking", default_features = false }
arml-funds-financialrecords = { path = "../../funds/financialrecords", default_features = false }
arml-exchange-pendingorders = { path = "../../exchange/pendingorders", default_features = false }
arml-bridge-btc = { path = "../../bridge/btc", default_features = false }

[features]
default = ["std"]
std=[
    "serde/std",
    "serde_derive",
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "sr-primitives/std",
    "srml-support/std",
    "srml-system/std",
    "srml-timestamp/std",
    "srml-balances/std",
    # arml
    "arml-system/std",
    "arml-support/std",
    "arml-associations/std",
    "arml-tokenbalances/std",
    "arml-mining-staking/std",
    "arml-funds-financialrecords/std",
    "arml-exchange-pendingorders/std",
    "arml-bridge-btc/std",
]
